# scxml

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  deny.toml  index.html  types.d.ts
.claude/: CLAUDE.md
.github/: .copilot-instructions.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
benches/: rkyv_bench.rs  statechart.rs
demo/: README.md  index.html
demo/examples/: document_lifecycle.scxml  document_lifecycle.xstate.json  new_product_approval.scxml  onboarding_approval.scxml  onboarding_approval.xstate.json  parallel_checks.scxml
examples/: README.md  compile_to_dispatcher.rs  settlement.scxml
scripts/: build-wasm-package.sh  generate-badge.sh
src/: builder.rs  diff.rs  error.rs  export.rs  flatten.rs  index.rs  lib.rs  model.rs  parse.rs  resolve.rs  simulate.rs  stats.rs  validate.rs  wasm.rs  xstate.rs
src/export/: dot.rs  json.rs  mermaid.rs  xml.rs
src/model/: action.rs  datamodel.rs  state.rs  statechart.rs  transition.rs
src/parse/: json.rs  sanitize.rs  xml.rs
src/validate/: liveness.rs  structural.rs
src/xstate/: export.rs  import.rs  types.rs
tests/: edge_cases.rs  examples.rs  proptest_invariants.rs  rkyv_roundtrip.rs  roundtrip.rs  w3c_subset.rs  xstate.rs
